Updated assembler documentation.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113555 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/assembler/assembler-howto.phtml
+++ b/doc/assembler/assembler-howto.phtml
@@ -404,6 +404,13 @@ registry; the reasoner is the one with the given URI.
 </p>
 
 <p>
+If the optional property <code>ja:schema</code> is specified, then
+the models specified by all the schema properties are unioned and
+any reasoner produced by the factory will have that union bound in
+as its schema (using the <code>Reasoner::bindSchema()</code> method).
+</p>
+
+<p>
 If the optional unique property <code>ja:reasonerClass</code> is specified,
 its value names a class which implements <code>ReasonerFactory</code>. That
 class is loaded and an instance of it used as the factory.
