--- a/doc/assembler/assembler-howto.phtml
+++ b/doc/assembler/assembler-howto.phtml
@@ -159,7 +159,7 @@ If the content has any prefix mappings, then they are also added
 to the model.
 </p>
 
-<p>All of a model's <code>ja:includes</code>, <code>ja:prefix</code>,
+<p>All of a model's <code>ja:prefixMapping</code>, <code>ja:prefix</code>,
 and <code>ja:namespace</code> properties are
 interpreted as specifying a <code>PrefixMapping</code> object and
 a single composite <code>PrefixMapping</code> is constructed and used
